1999-03-09  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* FCall.m (init_java): Remove JNI initialization from init_java.
	([FCall -setCallType:cType]): Use switch instead of if else.
	([FCall -setNumberOfArguments:number]): Likewise.
	([FCall -addArgument:value:type]): Likewise.

	* FCall.h: Insert contents of swarm_types.h in FCall.h 

	* swarm_types.h: Remove file. 

1999-03-05  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* swarm_types.h: New file. 

	* FCall.h: New file.

	* FCall.m: New file.
	

1999-02-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.h: Put all setters needed for createEnd to creating
	phase.  Remove duplicate setAppModeString: in setting.

1999-02-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Archiver.m ([Archiver_c -hdf5LoadObjectMap:key:],
	[Archiver_c -hdf5LoadArchiver:]): Return self.
	
1999-02-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.m (initDefobj): Call setSystemArchiverFlag: YES for
	hdf5Archiver and lispArchiver.

	* DefObject.m (lisp_output_type): Make buf larger.  Print empty/ignored
	object as #f instead of nil.

	* Archiver.m (lisp_output_objects): Add systemArchiverFlag
	argument (used to adjust indentation).  Generate EOL at the
	end of the loop instead of beginning. 
	(lisp_output_app_objects): New function.
	([Archiver_c -_lispOut_:]): Use it.
	([Archiver_c -_hdf5Out_:]): Handle non system archiver case.

	* Archiver.[hm] ([Archiver_c -createAppKey:mode:],
	([Archiver_c -ensureApp:], [Archiver_c -hdf5LoadObjectMap:key:],
	[Archiver_c -{hdf5,lisp}LoadArchiver:], [Archiver_c
	hdf5LoadObjectMap:key:]): New methods.
	(lispLoadArchiver, hdf5LoadArchiver): Remove.
	([Archiver_c +createBegin:]): Initialize systemArchiverFlag to NO.
	([Archiver_c -createEnd]): Use createAppKey: to get value of
	currentApplicationKey.  Use {hdf5,lisp}LoadArchiver: instead of
	functions.

	* Archiver.[hm], defobj.h ([Archiver_c -setSystemArchiverFlag:]):
	New method.
