@@ -14,6 +14,7 @@ Library:      defobj
 #include "defobj.xm"
 #import <defobj/Archiver.h>
 #import <defobj/HDF5Object.h>
+#import <defobj/FCall.h> //init_javacall_tables
 
 #include <objc/objc-api.h> // objc_lookup_class
 #include <misc.h> // strcmp, sscanf
@@ -88,6 +89,9 @@ _defobj_initialize (void)
 
   [ProtocolViolation setMessageString:
 "> This object does not comply with an expected protocol\n"];
+#ifdef HAVE_JDK
+  init_javacall_tables();
+#endif
 
 }
 
